# KariLang

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build_and_test.yml  release.yml
runtime/: main.c
src/: AST.cc  AST.hh  Compile.cc  Compile.hh  DS.h  JIT.cc  JIT.hh  Lexer.l  Main.cc  Parser.hh  Parser.yy  Utils.hh  cli_interpreter.h  common.h  interpreter.c  lexer.l  main.c  parser.h  parser.y  parser.yy  semantics.c
